Create service for find all avatar
