# api-spec.json
@@ -378,6 +378,116 @@
           }
         ]
       }
+    },
+    "/avatars": {
+      "get": {
+        "summary": "Find All Avatar",
+        "tags": [
+          "Avatar"
+        ],
+        "description": "This endpoint is used to find all avatar data.",
+        "responses": {
+          "200": {
+            "description": "Token Is Valid",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "code": {
+                      "type": "number"
+                    },
+                    "status": {
+                      "type": "string"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string"
+                          },
+                          "avatar_url": {
+                            "type": "string"
+                          },
+                          "avatar_name": {
+                            "type": "string"
+                          },
+                          "price": {
+                            "type": "number"
+                          },
+                          "created_at": {
+                            "type": "string"
+                          },
+                          "updated_at": {
+                            "type": "string"
+                          }
+                        }
+                      }
+                    }
+                  }
+                },
+                "example": {
+                  "code": 200,
+                  "status": "success",
+                  "message": "Find All Avatar Success",
+                  "data": [
+                    {
+                      "id": "692dc241-d271-44cf-a330-59a4f90f121c",
+                      "avatar_url": "https://res.cloudinary.com/dogz0yvva/image/upload/v1699843618/football-quiz/cbzzoidd8xc9ocxxwhnf.png",
+                      "avatar_name": "Manchester United",
+                      "price": 20,
+                      "created_at": "2023-11-12T19:46:59.000Z",
+                      "updated_at": "2023-11-12T19:46:59.000Z"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Access Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Failure"
+                },
+                "example": {
+                  "code": 401,
+                  "status": "failed",
+                  "message": "Access Unauthorized",
+                  "error": "JWT Token Invalid"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Failure"
+                },
+                "example": {
+                  "code": 500,
+                  "status": "failed",
+                  "message": "Internal Server Error",
+                  "error": "An unknown error occurred"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "Bearer Token": []
+          }
+        ]
+      }
     }
   },
   "components": {
